# elastic-django

./: .env-example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
mysite/: settings.py  urls.py
mysite/apps/: conftest.py
mysite/apps/authentication/: apps.py  serializers.py  urls.py  views.py
mysite/apps/authentication/tests/: test_auth_api.py
mysite/apps/core/: apps.py  models.py
mysite/apps/elastic/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
mysite/apps/proxy/: apps.py
mysite/apps/users/: apps.py  models.py  serializers.py  urls.py  views.py
mysite/apps/users/migrations/: 0001_initial.py
